[tool.poetry]
name = "briskclientsideusernames"
version = "0.1.0"
description = ""
authors = ["Nirmala Rao Dhanawada <wep.proto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
